# camera

./: .gitignore  Cargo.toml  Cross.toml  README.md  RELEASE.md  build.rs  cargo-sources.json  distrobox.ini  io.github.cosmic-utils.camera.yml  io.github.cosmic_utils.camera.yml  io.github.cosmicutils.camera.yml  io.github.freddyfunk.CosmicCamera.yml  io.github.freddyfunk.cosmic-camera.yml  justfile
.cargo/: config.toml
.github/: APKBUILD.template  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_from_app.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  create-release.yml  regenerate-previews.yml  regenerate.yml  release.yml  update-flatpak-runtime.yml
docker/: Dockerfile.aarch64  Dockerfile.aarch64-musl  Dockerfile.armhf  Dockerfile.armv7  Dockerfile.riscv64  Dockerfile.x86_64  Dockerfile.x86_64-musl
i18n/ar/: camera.ftl
i18n/bg/: camera.ftl
i18n/cs/: camera.ftl  metadata.ftl
i18n/de/: camera.ftl
i18n/en/: camera.ftl  cosmic_camera.ftl  metadata.ftl
i18n/es/: camera.ftl
i18n/fr/: camera.ftl
i18n/kmr/: camera.ftl
i18n/pl/: camera.ftl
i18n/pt-BR/: camera.ftl
i18n/sv/: camera.ftl
i18n/uk/: camera.ftl  metadata.ftl
i18n/zh-CN/: camera.ftl  metadata.ftl
preview/: Containerfile  README.md  capture-previews.sh  generate-previews.sh  shots.conf  sync-previews.sh  take-screenshots.sh
preview/locales/ar/: README.md
preview/locales/bg/: README.md
preview/locales/cs/: README.md
preview/locales/de/: README.md
preview/locales/es/: README.md
preview/locales/fr/: README.md
preview/locales/kmr/: README.md
preview/locales/sv/: README.md
preview/locales/uk/: README.md
preview/locales/zh-CN/: README.md
resources/: 51-kinect.rules  io.github.cosmic-utils.camera.desktop  io.github.cosmic-utils.camera.metainfo.xml  io.github.cosmic_utils.camera.desktop  io.github.cosmic_utils.camera.metainfo.xml  io.github.cosmicutils.camera.desktop  io.github.cosmicutils.camera.metainfo.xml  io.github.freddyfunk.CosmicCamera.desktop  io.github.freddyfunk.CosmicCamera.metainfo.xml  io.github.freddyfunk.cosmic-camera.desktop  io.github.freddyfunk.cosmic-camera.metainfo.xml
scripts/: gen-metadata.py
src/: bug_report.rs  cli.rs  config.rs  constants.rs  errors.rs  flash.rs  lib.rs  main.rs  network_manager.rs  storage.rs  terminal.rs  test_gpu.rs
src/app/: camera_ops.rs  dropdowns.rs  frosted_backdrop.rs  gallery_primitive.rs  gallery_rounded_shader.wgsl  gallery_widget.rs  keybind.rs  menu.rs  mod.rs  motor_picker.rs  overlay_style.rs  preview_geometry.rs  state.rs  ui.rs  update.rs  utils.rs  video_primitive.rs  video_shader.wgsl  video_shader_blur.wgsl  video_shader_blur_rgb.wgsl  video_shader_frosted.wgsl  video_shader_kawase.wgsl  video_shader_preblur.wgsl  video_shader_rgba.wgsl  video_widget.rs  view.rs
src/app/bottom_bar/: camera_switcher.rs  fade_primitive.rs  gallery_button.rs  mod.rs  mode_carousel.rs  mode_switcher.rs  slide_h.rs
src/app/camera_preview/: mod.rs  widget.rs
src/app/composition_overlay/: mod.rs  widget.rs
src/app/controls/: audio_meter.rs  capture_button.rs  mod.rs  recording_buttons.rs  recording_ui.rs
src/app/exposure_picker/: mod.rs  types.rs  view.rs
src/app/filter_picker/: mod.rs  square_container.rs  view.rs
src/app/format_picker/: mod.rs  preferences.rs  view.rs
src/app/frame_processor/: mod.rs  types.rs
src/app/frame_processor/tasks/: mod.rs  qr_detector.rs
src/app/handlers/: camera.rs  capture.rs  color.rs  depth_camera.rs  exposure.rs  format.rs  mod.rs  system.rs  ui.rs  virtual_camera.rs
src/app/insights/: types.rs  view.rs
src/app/keybind/: action.rs  bindings.rs  key_bindings_page.rs  mod.rs  serde.rs
src/app/qr_overlay/: action_button.rs  mod.rs  widget.rs
src/app/settings/: camera_settings.rs  mod.rs  view.rs
src/backends/: audio.rs  mod.rs
src/backends/camera/: depth_controller.rs  depth_native.rs  format_converters.rs  frame_loop.rs  libcamera_controls.rs  manager.rs  mod.rs  motor_control.rs  synthetic.rs  types.rs  v4l2_controls.rs  v4l2_depth.rs  v4l2_depth_controls.rs  v4l2_kernel_depth.rs  v4l2_utils.rs
src/backends/camera/libcamera/: enumeration.rs  mod.rs  pipeline.rs
src/backends/camera/libcamera/native/: mod.rs  (+3 more)
src/backends/camera/pipewire/: enumeration.rs  mod.rs  native.rs  pipeline.rs
src/backends/kinect/: mod.rs
src/backends/virtual_camera/: file_source.rs  filter_shader.wgsl  filters.rs  gpu_filter.rs  mod.rs  pipeline.rs  rgb_to_nv12.wgsl
src/gpu/: mod.rs
src/media/: mod.rs  nv12_compute.wgsl  nv12_converter.rs
src/media/decoders/: hardware.rs  mod.rs  pipeline.rs
src/media/encoders/: audio.rs  detection.rs  mod.rs  video.rs
src/media/formats/: codec.rs  conversions.rs  mod.rs
src/pipelines/: audio_level.rs  audio_probe.rs  mod.rs
src/pipelines/photo/: capture.rs  encoding.rs  mod.rs  processing.rs
src/pipelines/photo/burst_mode/: burst.rs  fft_gpu.rs  gpu_helpers.rs  mod.rs  params.rs
src/pipelines/scene/: gltf_export.rs  laz_export.rs  mod.rs
src/pipelines/video/: encoder_selection.rs  mod.rs  muxer.rs  recorder.rs  stats.rs  timelapse.rs
src/shaders/: convert_i420.wgsl  debayer.wgsl  filter_compute.wgsl  filters.wgsl  geometry.wgsl  gpu_convert.rs  gpu_filter.rs  gpu_processor.rs  gpu_utils.rs  histogram_compute.wgsl  histogram_pipeline.rs  kinect_intrinsics.rs  mod.rs  texture_filters.wgsl  yuv_common.rs  yuv_convert.rs  yuv_convert.wgsl
src/shaders/burst_mode/: align_tile.wgsl  ca_estimate.wgsl  chroma_denoise.wgsl  common.wgsl  fft_merge.wgsl  guided_filter.wgsl  noise_estimate.wgsl  pyramid.wgsl  sharpness.wgsl  spatial_denoise.wgsl  tonemap.wgsl  warp.wgsl
src/shaders/common/: geometry.wgsl  mod.rs  params.rs
src/shaders/depth/: constants.rs  mod.rs  processor.rs  visualization.rs  y10b_unpack.wgsl
src/shaders/mesh/: mesh_main.wgsl  mod.rs  processor.rs
src/shaders/point_cloud/: mod.rs  point_cloud_main.wgsl  processor.rs
src/shaders/yuv_convert/: mod.rs  processor.rs  yuv_to_rgba.wgsl
tests/: config_tests.rs  constants_tests.rs  keybind_defaults.rs  keybind_merge.rs  keybind_serde.rs
